[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/story3.gd" type="Script" id=1]
[ext_resource path="res://buttons & options/buttonSelected.png" type="Texture" id=2]
[ext_resource path="res://enemy/walking/skeleton-walking_0.png" type="Texture" id=3]
[ext_resource path="res://background/15Z_2102.w026.n002.153B.p1.153.jpg" type="Texture" id=4]
[ext_resource path="res://buttons/next.tscn" type="PackedScene" id=5]
[ext_resource path="res://buttons/previous.tscn" type="PackedScene" id=6]
[ext_resource path="res://buttons/game.tscn" type="PackedScene" id=7]
[ext_resource path="res://buttons/close.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/boorsok.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[node name="story3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="next" parent="bg" instance=ExtResource( 5 )]
margin_left = 1148.0
margin_top = 38.0
margin_right = 1270.0
margin_bottom = 159.0

[node name="previous" parent="bg" instance=ExtResource( 6 )]
margin_top = 38.0
margin_bottom = 159.0

[node name="game" parent="bg" instance=ExtResource( 7 )]
margin_left = 131.0
margin_top = 38.0
margin_right = 253.0
margin_bottom = 160.0

[node name="close" parent="bg" instance=ExtResource( 8 )]
margin_left = 6.0
margin_top = 38.0
margin_right = 128.0
margin_bottom = 160.0

[node name="textbox" type="TextureRect" parent="bg"]
margin_left = 126.0
margin_top = 481.0
margin_right = 951.0
margin_bottom = 682.0
texture = ExtResource( 2 )
expand = true

[node name="dialogue" type="RichTextLabel" parent="bg/textbox"]
margin_left = 29.0
margin_top = 30.0
margin_right = 794.0
margin_bottom = 154.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = SubResource( 1 )
bbcode_enabled = true

[node name="Timer" type="Timer" parent="bg"]
wait_time = 0.001
autostart = true

[node name="enemy" type="TextureRect" parent="bg"]
margin_left = 997.0
margin_top = 451.0
margin_right = 1260.0
margin_bottom = 691.0
texture = ExtResource( 3 )
expand = true

[connection signal="pressed" from="bg/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="bg/previous" to="." method="_on_previous_pressed"]
[connection signal="timeout" from="bg/Timer" to="." method="_on_Timer_timeout"]
